# system-monitor

./: Cargo.toml  LICENSE  README.MD  config.example.toml
.github/workflows/: release.yml  rust.yml
service/: README-windows.md  com.mikyrola.system-monitor.plist  system-monitor.service
src/: analysis.rs  config.rs  coolant.rs  daemon.rs  display.rs  main.rs  metrics.rs  notifications.rs  security.rs  temp_manager.rs  temperature.rs  types.rs
