[package]
name = "system-monitor"
version = "0.1.0"
edition = "2021"
authors = ["miky rola mikyrola8@gmail.com"]
description = "A comprehensive system monitoring tool"

[dependencies]
sysinfo = "0.29.0"
humansize = "2.1.3"
walkdir = "2.4.0"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true