[package]
name = "system-monitor-rs"
version = "0.2.0"
edition = "2021"
authors = ["miky rola <mikyrola8@gmail.com>"]
description = "A lightweight cross-platform system monitoring tool with desktop notifications"
license = "MIT"
repository = "https://github.com/miky-rola/system-monitor"
readme = "README.MD"
keywords = ["system", "monitor", "notifications", "daemon", "sysinfo"]
categories = ["command-line-utilities", "os"]

[[bin]]
name = "system-monitor"
path = "src/main.rs"

[dependencies]
sysinfo = "0.29.0"
humansize = "2.1.3"
walkdir = "2.4.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
notify-rust = "4"
log = "0.4"
env_logger = "0.11"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true